# ostis-speech-recognition-module

./: README.md
SRMTest/: CMakeLists.txt  SRMTest.cpp  SRMTest.hpp  SRMTestServise.hpp
SpeechRecognitionModule/: CMakeLists.txt  SpeechRecognitionModule.cpp  SpeechRecognitionModule.hpp  SpeechRecognitionService.hpp
services/SpeechRecognitionModule/: SpeechRecognitionModule.py  requirements.txt  speech2text.py
services/SpeechRecognitionModule/test/: test.py
